--- a/Course-Signup-System/Course-Signup-System.csproj
+++ b/Course-Signup-System/Course-Signup-System.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Common\" />
     <Folder Include="Repositories\" />
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
