--- a/Course-Signup-System/Course-Signup-System.csproj
+++ b/Course-Signup-System/Course-Signup-System.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
@@ -18,9 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Common\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="DTO\NewFolder\" />
     <Folder Include="wwwroot\Image\" />
   </ItemGroup>
 
